# django-settings-local

./: .gitignore  README.md  README.rst  codecov.yml  dsl  setup.cfg  setup.py
.github/workflows/: python-package.yml
django_settings_local/: __init__.py  __main__.py  settings_local.py
src/django_settings_local/: __init__.py  __main__.py  cute_python.py  dsl.py  settings_local.py
tests/: test_project.py  test_settings_local.py
tests/no_patch_globals/: test_no_patch_globals.py
tests/settings_local_with_patch_globals/: settings_local.py
tests/settings_local_with_patch_globals_not_function/: settings_local.py
tests/test_project/: settings.py
