[metadata]
name = django-settings-local
version = attr: django_settings_local.__version__
description = Manage Django Local Settings
long_description = file: README.rst
keywords = django, local, settings
license = GPL-3.0
license_file = LICENSE
author = Fasih Ahmad Fakhri
author_email = fasih@email.com
url = https://github.com/fasih/django-settings-local
classifiers = 
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries

[options]
packages = django_settings_local
python_requires = >=3.6

[options.entry_points]
console_scripts = 
    dsl = django_settings_local.__main__:main
